[package]
name = "torquata"
version = "0.1.0"
authors = ["loki <carl-campbell-III@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt="^0.4"
chrono="^0.4"
env_logger="^0.6"
image = "^0.21"
ratelimit="^0.4"
rocket="^0.4"
serde_derive="^1.0"
uuid="^0.7"
