[package]
name = "torquata"
version = "0.1.0"
authors = ["loki <carl-campbell-III@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color_scaling = "^0.0"
image = "^0.21"
num-complex="^0.2"
palette="^0.4"
rayon="^1.1"
serde={version = "^1.0", features = ["derive"]}
